[project]
name = "lago-integration-sample"
version = "0.2.0"
description = "Integration service that syncs Red Hat Cost Management (Koku) data to Lago for itemized billing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "pgarciaq" }]
dependencies = [
    "lago-python-client",
    "httpx",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "respx",
    "ruff",
]

[project.scripts]
lago-sync = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
